# LabParallelAes

./: CMakeLists.txt  common.cpp  common.h  mpi.cpp  openmp.cpp  test.cpp
